# project-a-knowledge-transfer-skeleton-code

./: .aws_creds.sample  .gitignore  Makefile  README.md  docker-compose.yml  runner.sh
pav-tester/: .gitignore  .shellcheckrc  Dockerfile  build.development.env.nix  build.staging.env.nix  entrypoint.sh  pyproject.toml
pav-tester/nix/: sources.json
pav-tester/scripts/: build.sh  push.sh
pav-tester/tests/: config.py  main.py
